--- a/src/DShop.Services.Orders/Properties/launchSettings.json
+++ b/src/DShop.Services.Orders/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56483/",
+      "applicationUrl": "http://localhost:5005/",
       "sslPort": 0
     }
   },
@@ -12,16 +12,16 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     },
     "DShop.Services.Orders": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       },
-      "applicationUrl": "http://localhost:56484/"
+      "applicationUrl": "http://localhost:5005/"
     }
   }
 }
