--- a/src/DShop.Services.Orders/DShop.Services.Orders.csproj
+++ b/src/DShop.Services.Orders/DShop.Services.Orders.csproj
@@ -1,24 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
-
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
-  
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <ProjectReference Include="..\..\..\DNC-DShop.Common\src\DShop.Common\DShop.Common.csproj" />
     <ProjectReference Include="..\..\..\DNC-DShop.Messages\src\DShop.Messages\DShop.Messages.csproj" />
   </ItemGroup>
-
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <PackageReference Include="DShop.Common" Version="1.0.*" />
+    <PackageReference Include="DShop.Messages" Version="1.0.*" />
+  </ItemGroup>
 </Project>
