--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -17,28 +17,38 @@
     "database": "dshop-orders-service",
     "seed": false
   },
-	"rawRabbit": {
-		"username": "guest",
-		"password": "guest",
-		"virtualHost": "/",
-		"port": 5672,
-		"hostnames": ["localhost"],
-		"requestTimeout": "00:00:10",
-		"publishConfirmTimeout": "00:00:01",
-		"recoveryInterval": "00:00:10",
-		"persistentDeliveryMode": true,
-		"autoCloseConnection": true,
-		"automaticRecovery": true,
-		"topologyRecovery": true,
-		"exchange": {
-				"durable": true,
-				"autoDelete": false,
-				"type": "Topic"
-		},
-		"queue": {
-				"autoDelete": false,
-				"durable": true,
-				"exclusive": false
-		}
-	}
+  "rawRabbit": {
+    "username": "guest",
+    "password": "guest",
+    "virtualHost": "/",
+    "port": 5672,
+    "hostnames": [ "localhost" ],
+    "requestTimeout": "00:00:10",
+    "publishConfirmTimeout": "00:00:01",
+    "recoveryInterval": "00:00:10",
+    "persistentDeliveryMode": true,
+    "autoCloseConnection": true,
+    "automaticRecovery": true,
+    "topologyRecovery": true,
+    "exchange": {
+      "durable": true,
+      "autoDelete": false,
+      "type": "Topic"
+    },
+    "queue": {
+      "autoDelete": false,
+      "durable": true,
+      "exclusive": false
+    }
+  },
+  "products-service": {
+    "host": "localhost",
+    "scheme": "http",
+    "port": "5006"
+  },
+  "customers-service": {
+    "host": "localhost",
+    "scheme": "http",
+    "port": "5001"
+  }
 }
