--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "appMetrics": {
+    "database": "dshop",
+    "uri": "http://localhost:8086",
+    "env": "local",
+    "interval": 5,
+    "enabled": true
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
