--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -1,4 +1,11 @@
 ﻿{
+  "appMetrics": {
+    "database": "dshop",
+    "uri": "http://app-metrics:8086",
+    "env": "docker",
+    "interval": 5,
+    "enabled": true
+  },
   "mongo": {
     "connectionString": "mongodb://mongo:27017",
     "database": "dshop-orders-service",
