--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -1,4 +1,14 @@
 ﻿{
+  "consul": {
+    "endpoint": "http://localhost:8500",
+    "service": "orders-service",
+    "address": "localhost",
+    "port": "5005",
+    "pingEnabled": false,
+    "pingEndpoint": "ping",
+    "pingInterval": 5,
+    "deregisterInterval": 10
+  },
   "metrics": {
     "database": "dshop",
     "uri": "http://localhost:8086",
