Polly integration with Consul and RestEase

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -1,4 +1,15 @@
 ﻿{
+  "consul": {
+    "endpoint": "http://consul:8500",
+    "service": "orders-service",
+    "address": "orders-service",
+    "port": "5005",
+    "pingEnabled": false,
+    "pingEndpoint": "ping",
+    "pingInterval": 5,
+    "removeAfterInterval": 10,
+    "requestRetries": 3
+  },
   "metrics": {
     "database": "dshop",
     "uri": "http://app-metrics:8086",
@@ -34,5 +45,22 @@
       "durable": true,
       "exclusive": false
     }
+  },
+  "restEase": {
+    "useConsul": false,
+    "services": [
+      {
+        "name": "customers-service",
+        "host": "customers-service",
+        "scheme": "http",
+        "port": "5001"
+      },
+      {
+        "name": "products-service",
+        "host": "products-service",
+        "scheme": "http",
+        "port": "5006"
+      }
+    ]
   }
 }
