--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -7,7 +7,8 @@
     "pingEnabled": false,
     "pingEndpoint": "ping",
     "pingInterval": 5,
-    "deregisterInterval": 10
+    "removeAfterInterval": 10,
+    "requestRetries": 3
   },
   "metrics": {
     "database": "dshop",
@@ -58,14 +59,21 @@
       "exclusive": false
     }
   },
-  "products-service": {
-    "host": "localhost",
-    "scheme": "http",
-    "port": "5006"
-  },
-  "customers-service": {
-    "host": "localhost",
-    "scheme": "http",
-    "port": "5001"
+  "restEase": {
+    "useConsul": false,
+    "services": [
+      {
+        "name": "customers-service",
+        "host": "localhost",
+        "scheme": "http",
+        "port": "5001"
+      },
+      {
+        "name": "products-service",
+        "host": "localhost",
+        "scheme": "http",
+        "port": "5006"
+      }
+    ]
   }
 }
