--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "consul": {
-    "endpoint": "http://localhost:8500",
+    "url": "http://localhost:8500",
     "service": "orders-service",
     "address": "localhost",
     "port": "5005",
@@ -75,5 +75,14 @@
         "port": "5006"
       }
     ]
+  },
+  "vault": {
+    "enabled": false,
+    "url": "http://localhost:8200",
+    "key": "orders-service/options",
+    "authType": "token",
+    "token": "secret",
+    "username": "user",
+    "password": "secret"
   }
 }
