Added new features - logging, metrics, swagger

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -1,4 +1,7 @@
 ﻿{
+  "app": {
+    "name": "orders-service"
+  },
   "consul": {
     "url": "http://consul:8500",
     "service": "orders-service",
@@ -10,12 +13,21 @@
     "removeAfterInterval": 10,
     "requestRetries": 3
   },
+  "elk": {
+    "enabled": false,
+    "url": "http://logstash:9200",
+    "indexFormat": "orders-service-{0:yyyy.MM.dd}",
+    "basicAuthEnabled": false,
+    "username": "user",
+    "password": "secret"
+  },
   "metrics": {
+    "enabled": true,
+    "prometheusEnabled": true,
+    "influxUrl": "http://influx:8086",
     "database": "dshop",
-    "uri": "http://app-metrics:8086",
     "env": "docker",
-    "interval": 5,
-    "enabled": true
+    "interval": 5
   },
   "mongo": {
     "connectionString": "mongodb://mongo:27017",
@@ -62,6 +74,24 @@
         "port": "5006"
       }
     ]
+  },
+  "serilog": {
+    "consoleEnabled": true,
+    "level": "information"
+  },
+  "seq": {
+    "enabled": true,
+    "url": "http://seq:5341",
+    "token": "secret"
+  },
+  "swagger": {
+    "enabled": true,
+    "reDocEnabled": false,
+    "name": "v1",
+    "title": "Orders Service",
+    "version": "v1",
+    "routePrefix": "docs",
+    "includeSecurity": true
   },
   "vault": {
     "enabled": false,
