--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "app": {
+    "name": "orders-service"
+  },
   "consul": {
     "url": "http://localhost:8500",
     "service": "orders-service",
@@ -10,25 +13,21 @@
     "removeAfterInterval": 10,
     "requestRetries": 3
   },
-  "metrics": {
-    "database": "dshop",
-    "uri": "http://localhost:8086",
-    "env": "local",
-    "interval": 5,
-    "enabled": true
+  "elk": {
+    "enabled": false,
+    "url": "http://localhost:9200",
+    "indexFormat": "orders-service-{0:yyyy.MM.dd}",
+    "basicAuthEnabled": false,
+    "username": "user",
+    "password": "secret"
   },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
+  "metrics": {
+    "enabled": true,
+    "prometheusEnabled": true,
+    "influxUrl": "http://localhost:8086",
+    "database": "dshop",
+    "env": "local",
+    "interval": 5
   },
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
@@ -75,6 +74,24 @@
         "port": "5006"
       }
     ]
+  },
+  "serilog": {
+    "consoleEnabled": true,
+    "level": "information"
+  },
+  "seq": {
+    "enabled": true,
+    "url": "http://localhost:5341",
+    "token": "secret"
+  },
+  "swagger": {
+    "enabled": true,
+    "reDocEnabled": false,
+    "name": "v1",
+    "title": "Orders Service",
+    "version": "v1",
+    "routePrefix": "docs",
+    "includeSecurity": true
   },
   "vault": {
     "enabled": false,
