Redis, updated settings

--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -3,6 +3,7 @@
     "name": "orders-service"
   },
   "consul": {
+    "enabled": false,
     "url": "http://localhost:8500",
     "service": "orders-service",
     "address": "localhost",
@@ -35,7 +36,7 @@
     "database": "dshop-orders-service",
     "seed": false
   },
-  "rawRabbit": {
+  "rabbitMq": {
     "username": "guest",
     "password": "guest",
     "virtualHost": "/",
@@ -58,6 +59,9 @@
       "durable": true,
       "exclusive": false
     }
+  },
+  "redis": {
+    "connectionString": "localhost"
   },
   "restEase": {
     "useConsul": false,
@@ -97,7 +101,7 @@
   "vault": {
     "enabled": false,
     "url": "http://localhost:8200",
-    "key": "orders-service/options",
+    "key": "orders-service/settings",
     "authType": "token",
     "token": "secret",
     "username": "user",
