Message namespace for RabbitMQ, Startup initializer

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -37,6 +37,7 @@
     "seed": false
   },
   "rabbitMq": {
+    "namespace": "orders",
     "username": "guest",
     "password": "guest",
     "virtualHost": "/",
