--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -37,6 +37,7 @@
     "seed": false
   },
   "rabbitMq": {
+    "namespace": "orders",
     "username": "guest",
     "password": "guest",
     "virtualHost": "/",
