Redis options instance name

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -62,7 +62,8 @@
     }
   },
   "redis": {
-    "connectionString": "redis"
+    "connectionString": "redis",
+    "instance": "orders:"
   },
   "restEase": {
     "useConsul": false,
