--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -62,7 +62,8 @@
     }
   },
   "redis": {
-    "connectionString": "localhost"
+    "connectionString": "localhost",
+    "instance": "orders:"
   },
   "restEase": {
     "useConsul": false,
