Updated scripts and readme

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -7,7 +7,7 @@
     "url": "http://consul:8500",
     "service": "orders-service",
     "address": "orders-service",
-    "port": "5005",
+    "port": "5000",
     "pingEnabled": false,
     "pingEndpoint": "ping",
     "pingInterval": 5,
@@ -88,7 +88,7 @@
   },
   "seq": {
     "enabled": true,
-    "url": "http://seq:5341",
+    "url": "http://seq",
     "token": "secret"
   },
   "swagger": {
