--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -33,7 +33,7 @@
   },
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "dshop-orders-service",
+    "database": "orders-service",
     "seed": false
   },
   "rabbitMq": {
