Fabio load balancer

--- a/src/DShop.Services.Orders/appsettings.docker.json
+++ b/src/DShop.Services.Orders/appsettings.docker.json
@@ -22,6 +22,12 @@
     "username": "user",
     "password": "secret"
   },
+  "fabio": {
+    "enabled": false,
+    "url": "http://fabio:9999",
+    "service": "orders-service",
+    "requestRetries": 3
+  },
   "metrics": {
     "enabled": true,
     "influxEnabled": false,
@@ -66,7 +72,7 @@
     "instance": "orders:"
   },
   "restEase": {
-    "useConsul": false,
+    "loadBalancer": "",
     "services": [
       {
         "name": "customers-service",
