--- a/src/DShop.Services.Orders/appsettings.json
+++ b/src/DShop.Services.Orders/appsettings.json
@@ -44,11 +44,15 @@
   },
   "rabbitMq": {
     "namespace": "orders",
+    "retries": 3,
+    "retryInterval": 2,
     "username": "guest",
     "password": "guest",
     "virtualHost": "/",
     "port": 5672,
-    "hostnames": [ "localhost" ],
+    "hostnames": [
+      "localhost"
+    ],
     "requestTimeout": "00:00:10",
     "publishConfirmTimeout": "00:00:01",
     "recoveryInterval": "00:00:10",
