--- a/Dockerfile.multistage.advanced
+++ b/Dockerfile.multistage.advanced
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:2.2-sdk AS build
+FROM mcr.microsoft.com/dotnet/core/sdk AS build
 WORKDIR /app
 
 ARG sln=DShop.Services.Orders.sln
@@ -16,7 +16,7 @@ RUN dotnet restore /property:Configuration=${configuration} ${feed}
 COPY . ./
 RUN dotnet publish ${service} -c ${configuration} -o out ${feed}
 
-FROM microsoft/dotnet:2.2-aspnetcore-runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
 WORKDIR /app
 
 ARG service=src/DShop.Services.Orders
